# ai-master

./: .editorconfig  .gitattributes  .gitignore  CONTRBUTION.md  LICENSE  README.md V0.1.0  docker-compose.yml  pyproject.toml
apps/fastapi_app/app/: main.py
apps/fastapi_app/app/api/: routes.py
apps/fastapi_app/app/services/: chat_service.py
docs/: 00-Vision.md  01-Roadmap.md  02-Tech-Stack.md  03-Architecture.md  04-Learning-Plan.md  05-Project-Tracker.md  06-Daily-Journal.md  07-Interview-Tracker.md  08-Career-Transition.md  09-Changelog.md  AI-MENTOR-PROMPT.md  README.md  SESSION-HANDOFF.md  START-HERE.md
docs/sprints/: SPRINT-001-Platform-Bootstrap.md
projects/ai-chat-app/: .env.example  .gitignore  main.py  requirements.txt
projects/ai-chat-app/app/: main.py
projects/ai-chat-app/app/api/: chat.py  route.py
projects/ai-chat-app/app/core/: config.py  exceptions.py  logger.py
projects/ai-chat-app/app/providers/: deepseek_provider.py  gemini_provider.py  provider_factory.py
projects/ai-chat-app/app/services/: chat_service.py  deepseek_provider.py  gemini_provider.py  llm_provider.py  provider_factory.py
projects/ai-chat-app/docs/: 05-Project-Tracker.md
projects/ai-chat-app/tests/: test_chat.py  test_health.py
projects/prompt-library/: README.md  cli.py
projects/prompt-library/prompts/coding/: bug-explainer.yaml  code-review-strict.yaml
projects/prompt-library/prompts/rag/: qa-with-context.yaml
projects/prompt-library/prompts/writing/: summarize-for-audience.yaml
projects/prompt-library/tests/: test_loader.py
requirements/: base.txt  dev.txt
shared/prompts/: __init__.py  loader.py  schema.py
