[project]
name = "ai-master"
version = "0.1.0"
description = "Personal AI Engineering Platform"
requires-python = ">=3.12"

dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "httpx>=0.28.1",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
    "mypy",
    "pre-commit",
    "ipykernel",
    "jupyter",
]

ai = [
    "openai",
    "langchain",
    "langchain-openai",
    "langgraph",
    "pydantic",
    "tiktoken",
]

web = [
    "fastapi",
    "uvicorn",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
